# organize-tube

./: .env.development  .env.example  .gitignore  CLAUDE.md  MP3_UPLOADS_FEATURE_PLAN.md  Makefile  README.md  REQUIREMENTS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: index.html
public/: embed.html
src/: App.css  App.tsx  index.css  test-setup.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/migrations/: 001_initial.sql  002_custom_field_definitions.sql  003_drop_song_name_column.sql  004_add_tags_json_column.sql  004_add_tags_json_column_safe.sql  005_add_mp3_support.sql  006_simplify_schema_for_mp3.sql
src-tauri/src/: main.rs  mp3_commands.rs
src/__tests__/: MySongsModal.test.tsx  SongLoadVolumeBehavior.test.tsx  VideoLoadAndCopyLink.test.tsx  VolumeLogic.test.tsx
src/components/: EditableTime.css  EditableTime.tsx  LoopControls.css  LoopControls.tsx  LoopProgressBar.css  LoopProgressBar.tsx  SetsSidebar.css  SetsSidebar.tsx  YouTubePlayer.tsx
src/hooks/: useCustomFields.ts  useKeyboardShortcuts.ts  useLoopControls.ts  useLoopControlsSQLite.ts  useModal.ts  useSavedSongs.ts  useTags.ts
src/mocks/: tauri.ts
src/repositories/: customFieldRepository.ts  loopSegmentRepository.ts  songRoutineRepository.ts
src/services/: csvExportService.ts  csvImportService.ts  dataExportService.ts  databaseService.ts  mp3DownloadService.ts  mp3UploadService.ts  tagsService.ts
src/types/: loops.ts  modal.ts
src/utils/: testYouTube.ts  userSongData.ts  (+1 more)
(+38 files in other folders)
